--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -14,7 +14,7 @@
         {% for product in products %}
             <tr>
                 <td><img height="100" width="100" src="{{ MEDIA_URL }}{{ product.image }}"></td>
-                <td>{{ product.name }}</td>
+                <td><a href="{% url 'product_details' product.id %}">{{ product.name }}</a></td>
                 <td>{{ product.description }}</td>
                 <td>{{ product.price }}</td>
                 <td>
